# ascom-alpaca-core

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  release-please-config.json  release-plz.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/conformu-settings/: base.json  telescope-core.json  telescope-pier.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
docs/: architecture.md
examples/: conformu_harness.rs
src/: lib.rs
src/camera/: image.rs  mod.rs  types.rs
src/conformu/: dispatch.rs  management.rs  mod.rs
src/conformu/mocks/: camera.rs  cover_calibrator.rs  dome.rs  filter_wheel.rs  focuser.rs  mod.rs  observing_conditions.rs  rotator.rs  safety_monitor.rs  switch.rs  telescope.rs
src/cover_calibrator/: mod.rs
src/device/: common.rs  mod.rs
src/discovery/: mod.rs
src/dome/: mod.rs
src/filter_wheel/: mod.rs
src/focuser/: mod.rs
src/management/: mod.rs
src/observing_conditions/: mod.rs
src/registry/: client.rs  mod.rs  transaction.rs
src/rotator/: mod.rs
src/safety_monitor/: mod.rs
src/switch/: mod.rs
src/telescope/: mod.rs  types.rs
src/types/: device_type.rs  error.rs  guide_direction.rs  mod.rs  params.rs  response.rs
tests/: device_trait_tests.rs  discovery_tests.rs  enum_tests.rs  error_tests.rs  image_tests.rs  management_tests.rs  registry_tests.rs  response_tests.rs  schema_validation_tests.rs
