[package]
name = "ascom-alpaca-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Framework-agnostic ASCOM Alpaca protocol types and serialization for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nightwatch-astro/ascom-alpaca-core"
keywords = ["ascom", "alpaca", "astronomy", "astrophotography"]
categories = ["science", "encoding"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
